# RozetkaScrapeAPI

./: README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 444ca8d5ad0c_change_title_field.py  b3025d74f5ec_changed_user_model.py  c9386f8c9414_add_foregin_key.py  ce611ddff488_initial_migration.py  e596356b8125_create_user_table.py
backend/app/api/dependencies/: core.py
backend/app/api/models/: product.py
backend/app/api/routes/: product.py  user.py
backend/app/core/: config.py  database.py
backend/app/crud/: product.py  user.py
backend/app/models/: product.py  user.py
backend/app/schemas/: product.py  user.py
